trivial modification in home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Power by <a href="http://lukathis.github.io">Travis</a>.</p>
+              <p>Powered by <a href="http://lukathis.github.io">Travis</a>.</p>
             </div>
           </div>
 
