创建了models中的article,category及author表并为其配置了url及view映射,创建了index页面及detail页面,并将home页面链接至index

--- a/templates/Blog/detail.html
+++ b/templates/Blog/detail.html
@@ -28,7 +28,7 @@
             </ul>
           </nav>
 
-          <a class="btn btn-default btn-sm" href="{% url 'blog:index' %}" role="button">返回首页 &raquo;</a>
+          <a class="btn btn-default btn-sm" href="{% url 'blog:index' %}" role="button">返回首页 &raquo;</a>gi
 
         </div><!-- /.blog-main -->
 
