--- a/templates/home.html
+++ b/templates/home.html
@@ -54,13 +54,13 @@
             <h1 class="cover-heading">New Concept for Civil Engineering</h1>
             <p class="lead">Let's make CE fun and interesting.</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Home page</a>
+              <a href="{% url 'blog:index' %}" class="btn btn-lg btn-default">Home page</a>
             </p>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Powered by <a href="http://lukathis.github.io">Travis</a>.</p>
+              <p>Powered by <a href="https://lukathis.github.io">Travis</a>.</p>
             </div>
           </div>
 
