last edition without login

--- a/templates/Blog/detail.html
+++ b/templates/Blog/detail.html
@@ -5,9 +5,14 @@
 
     <div class="container">
 
+      <!--暂时不需要主题头部
       <div class="blog-header">
         <h1 class="blog-title">The CExchange Blog</h1>
       </div>
+      -->
+      <!-- 临时用br隔开导航栏及标题 -->
+      <br>
+      <br>
 
       <div class="row">
 
@@ -35,32 +40,22 @@
 
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
-            <h4>About</h4>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+            <h4>主题分类</h4>
+            {{ article_detail.category | safe }}
           </div>
           <div class="sidebar-module">
-            <h4>Archives</h4>
+            <h4>其他文章</h4>
             <ol class="list-unstyled">
               <li><a href="#">March 2014</a></li>
               <li><a href="#">February 2014</a></li>
-              <li><a href="#">January 2014</a></li>
-              <li><a href="#">December 2013</a></li>
-              <li><a href="#">November 2013</a></li>
-              <li><a href="#">October 2013</a></li>
-              <li><a href="#">September 2013</a></li>
-              <li><a href="#">August 2013</a></li>
-              <li><a href="#">July 2013</a></li>
-              <li><a href="#">June 2013</a></li>
-              <li><a href="#">May 2013</a></li>
-              <li><a href="#">April 2013</a></li>
             </ol>
+
           </div>
           <div class="sidebar-module">
-            <h4>Elsewhere</h4>
+            <h4>友情链接</h4>
             <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Facebook</a></li>
+              <li><a href="https://github.com">GitHub</a></li>
+              <li><a href="https://lukathis.github.io">Travis</a></li>
             </ol>
           </div>
         </div><!-- /.blog-sidebar -->
